fixed minor bugs including strip reordering and scrollbar display

--- a/public/css/app.less
+++ b/public/css/app.less
@@ -57,7 +57,7 @@ body#body,
   float: right;
 }
 foreignobject body {
-  overflow: hidden
+  overflow-x: hidden
 }
 svg .btn.icon-btn {
   font-family: FontAwesome;
